--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bakery</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -318,8 +320,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
-    <script src="./js/form.js"></script>
+    <!-- <script src="./js/form.js"></script>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script> -->
   </body>
 </html>
